# lidar_detection

./: CMakeLists.txt  README.md  build.sh  run.sh
include/: logger.hpp  options.hpp  process_point_clouds.hpp
include/processors/: bounding_box.hpp  box.hpp  boxq.hpp  kd_tree.hpp  node.hpp  ransac.hpp
include/render/: camera_angle.h  car.hpp  color.hpp  render.hpp  vect3.hpp
src/: config.json  main.cpp
